[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "4.5.4"
zenoh = "0.11.0-rc.2"
simple_logger = "5.0.0"
log = "0.4.14"